--- a/ssic.html
+++ b/ssic.html
@@ -3,7 +3,7 @@
 <!-- Copied from https://expert-themes.com/html/eventrox/about-us.html by Cyotek WebCopy 1.7.0.600, Thursday, September 19, 2019, 12:52:40 AM -->
 <head>
 <meta charset="utf-8">
-<title>Eventrox - Digital Events HTML Template | About Us</title>
+<title>SSIC 2017</title>
 <!-- Stylesheets -->
 <link href="css/bootstrap.css" rel="stylesheet">
 <link href="css/style.css" rel="stylesheet">
@@ -167,7 +167,7 @@
             <h1>SSIC 2017</h1>
             <ul class="bread-crumb clearfix">
 
-                <li>Smart System International Conference</li>
+                <li>Smart System Innovations & Computing</li>
             </ul>
         </div>
     </section>
@@ -210,8 +210,8 @@
             </div>
         </div>
     </section>
-    <section id="about">
-        <div class="container content-section text-center">
+    <section id="about" >
+        <div class="container content-section text-center" >
             <div class="row">
 
                 <hr width="15%" />
@@ -524,6 +524,7 @@
                     </div>
                 </div>
             </div>
+
         </div>
     </section>
     <!--End Fun Fact Section -->
@@ -736,6 +737,50 @@
     </section>
 
 
+    <!-- Call to action -->
+    <section id="spring" class="fun-fact-section style-two" style="background-image: url(images/background/9.jpg);">
+        <div class="auto-container">
+            <div class="sec-title text-center">
+                <span class="title" style="color:#fff;">PROCEEDINGS</span>
+                <h2 style="color:#fff;">SPRINGER NATURE SINGAPORE</h2>
+            </div>
+            <div class="fact-counter">
+                <div class="row clearfix">
+
+                    <!--Column-->
+                    <div class="counter-column col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+                        <div class="count-box">
+                            <span class="icon icon_check"></span>
+                            <span class="count-text" data-speed="3000" data-stop="54">0</span>
+                            <h4 class="counter-title">Citations</h4>
+                        </div>
+                    </div>
+
+                    <!--Column-->
+                    <div class="counter-column col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="400ms">
+                        <div class="count-box">
+                            <span class="icon icon_shield"></span>
+                            <span class="count-text" data-speed="3000" data-stop="274">0</span>
+                            <h4 class="counter-title">Readers</h4>
+                        </div>
+                    </div>
+
+                    <!--Column-->
+                    <div class="counter-column col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="800ms">
+                        <div class="count-box">
+                            <span class="icon icon_globe-2"></span>
+                            <span class="count-text" data-speed="3000" data-stop="61091">0</span>
+                            <h4 class="counter-title">Downloads</h4>
+                        </div>
+                    </div>
+
+                    <!--Column-->
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--End Call to action -->
+
 
 
 
@@ -750,24 +795,7 @@
 
         <div class="auto-container">
             <!--Subscribe Form-->
-            <div class="subscribe-form wow fadeInUp" data-wow-delay="500ms">
-                <div class="envelope-image"></div>
-                <div class="form-inner">
-                    <div class="upper-box">
-                        <div class="sec-title text-center">
-                            <div class="icon-box"><span class="fa fa-envelope"></span></div>
-                            <h2>Subscribe our newslatter</h2>
-                            <div class="text">Lorem ipsum dolor amet consectetur adipisicing elit sed eiusm <br>tempor incididunt ut labore dolore magna.</div>
-                        </div>
-                    </div>
-                    <form method="post" action="contact.html">
-                        <div class="form-group">
-                            <input type="email" name="email" value="" placeholder="Your email" required="">
-                            <button type="submit" class="theme-btn"><span class="fa fa-paper-plane"></span></button>
-                        </div>
-                    </form>
-                </div>
-            </div> 
+
         </div>
     </section>
     <!--End Newsletter Section -->
