--- a/speakers.html
+++ b/speakers.html
@@ -105,9 +105,14 @@
                                         <li><a href="about-jaipur.html">About Jaipur</a></li>
                                     </ul>
                                 </li>
+                                <li class="dropdown"><a href="organizers.html">Committees</a>
+                                    <ul>
+                                        <li><a href="organizers.html">Organisers</a></li>
+                                        <li><a href="advisory.html">Advisory Committee</a></li>
+                                    </ul>
+                                </li>
                                 <li ><a class="current" href="speakers.html">Speakers</a></li>
-                                <li ><a href="organizers.html">Organizers</a></li>
-                               <li><a href="schedule.html">Schedule</a></li>
+                                <li><a href="schedule.html">Schedule</a></li>
                             </ul>
                         </div>
                     </nav>
@@ -183,7 +188,7 @@
             </div>
 
             <div class="row">
-                
+
                 <!-- Speaker Block -->
                 <div class="speaker-block-two col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
@@ -192,9 +197,9 @@
                             <span class="designation">Event Manager</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-1.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-1.jpg" alt=""></a></figure>
                         </div>
-                        <div class="social-box">                            
+                        <div class="social-box">
                             <ul class="social-links social-icon-colored">
                                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -213,9 +218,9 @@
                             <span class="designation">Event Manager</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-2.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-2.jpg" alt=""></a></figure>
                         </div>
-                        <div class="social-box">                            
+                        <div class="social-box">
                             <ul class="social-links social-icon-colored">
                                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -234,7 +239,7 @@
                             <span class="designation">Event Manager</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-4.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-4.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -255,7 +260,7 @@
                             <span class="designation">Event Manager</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-3.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-3.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -276,7 +281,7 @@
                             <span class="designation">Event Manager</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-5.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-5.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -297,7 +302,7 @@
                             <span class="designation">Event Manager</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-6.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-6.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -318,7 +323,7 @@
                             <span class="designation">Event Manager</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-7.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-7.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -339,7 +344,7 @@
                             <span class="designation">Event Manager</span>
                         </div>
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-8.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-8.jpg" alt=""></a></figure>
                         </div>
                         <div class="social-box">
                             <ul class="social-links social-icon-colored">
@@ -369,7 +374,7 @@
                 <div class="speaker-block col-xl-3 col-lg-4 col-md-6 col-sm-12">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-1.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-1.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <div class="inner">
@@ -390,7 +395,7 @@
                 <div class="speaker-block col-xl-3 col-lg-4 col-md-6 col-sm-12">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-2.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-2.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <div class="inner">
@@ -411,7 +416,7 @@
                 <div class="speaker-block col-xl-3 col-lg-4 col-md-6 col-sm-12">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-3.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-3.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <div class="inner">
@@ -432,7 +437,7 @@
                 <div class="speaker-block col-xl-3 col-lg-4 col-md-6 col-sm-12">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-4.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-4.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <div class="inner">
@@ -453,7 +458,7 @@
                 <div class="speaker-block col-xl-3 col-lg-4 col-md-6 col-sm-12">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-5.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-5.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <div class="inner">
@@ -474,7 +479,7 @@
                 <div class="speaker-block col-xl-3 col-lg-4 col-md-6 col-sm-12">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-6.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-6.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <div class="inner">
@@ -495,7 +500,7 @@
                 <div class="speaker-block col-xl-3 col-lg-4 col-md-6 col-sm-12">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-7.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-7.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <div class="inner">
@@ -516,7 +521,7 @@
                 <div class="speaker-block col-xl-3 col-lg-4 col-md-6 col-sm-12">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-8.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-8.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <div class="inner">
@@ -546,18 +551,18 @@
             </div>
 
             <div class="row">
-                
+
                 <!-- Speaker Block -->
                 <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-1.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-1.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <h4 class="name"><a href="speakers-detail.html">Dale Marke</a></h4>
                             <span class="designation">Event Manager</span>
                         </div>
-                        <div class="social-box">                            
+                        <div class="social-box">
                             <ul class="social-links social-icon-colored">
                                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -572,13 +577,13 @@
                 <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-2.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-2.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <h4 class="name"><a href="speakers-detail.html">Natisha Decoux</a></h4>
                             <span class="designation">Event Manager</span>
                         </div>
-                        <div class="social-box">                            
+                        <div class="social-box">
                             <ul class="social-links social-icon-colored">
                                 <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
                                 <li><a href="#"><i class="fab fa-twitter"></i></a></li>
@@ -593,7 +598,7 @@
                 <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-4.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-4.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <h4 class="name"><a href="speakers-detail.html">Adolfo Plahs</a></h4>
@@ -614,7 +619,7 @@
                 <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-3.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-3.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <h4 class="name"><a href="speakers-detail.html">Mitchell Hegg</a></h4>
@@ -635,7 +640,7 @@
                 <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-5.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-5.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <h4 class="name"><a href="speakers-detail.html">Kenyetta Lesley</a></h4>
@@ -656,7 +661,7 @@
                 <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-6.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-6.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <h4 class="name"><a href="speakers-detail.html">Shelly Verghese</a></h4>
@@ -677,7 +682,7 @@
                 <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-7.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-7.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <h4 class="name"><a href="speakers-detail.html">Kenyetta Lesley</a></h4>
@@ -698,7 +703,7 @@
                 <div class="speaker-block-three col-xl-3 col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
                     <div class="inner-box">
                         <div class="image-box">
-                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-8.jpg" alt=""></a></figure> 
+                            <figure class="image"><a href="speakers-detail.html"><img src="images/resource/speaker-8.jpg" alt=""></a></figure>
                         </div>
                         <div class="info-box">
                             <h4 class="name"><a href="speakers-detail.html">Shelly Verghese</a></h4>
