--- a/index.html
+++ b/index.html
@@ -107,8 +107,13 @@
                                         <li><a href="about-jaipur.html">About Jaipur</a></li>
                                     </ul>
                                 </li>
+                                <li class="dropdown"><a href="organizers.html">Committees</a>
+                                    <ul>
+                                        <li><a href="organizers.html">Organisers</a></li>
+                                        <li><a href="advisory.html">Advisory Committee</a></li>
+                                    </ul>
+                                </li>
                                 <li ><a class="current" href="speakers.html">Speakers</a></li>
-                                <li ><a href="organizers.html">Organizers</a></li>
                                <li><a href="schedule.html">Schedule</a></li>
                             </ul>
                         </div>
