--- a/schedule.html
+++ b/schedule.html
@@ -97,7 +97,7 @@
 
                         <div class="collapse navbar-collapse clearfix" id="navbarSupportedContent">
                             <ul class="navigation clearfix">
-                                <li class="current dropdown"><a href="index.html">Home</a></li>
+                                <li><a href="index.html">Home</a></li>
                                 <li class="dropdown"><a href="ssic.html">About</a>
                                     <ul>
                                         <li><a href="ssic.html">SSIC 2017</a></li>
@@ -106,9 +106,14 @@
                                         <li><a href="about-jaipur.html">About Jaipur</a></li>
                                     </ul>
                                 </li>
-                                <li ><a href="speakers.html">Speakers</a></li>
-                                <li ><a href="organizers.html">Organizers</a></li>
-                               <li><a href="schedule.html">Schedule</a></li>
+                                <li class="dropdown"><a href="organizers.html">Committees</a>
+                                    <ul>
+                                        <li><a href="organizers.html">Organisers</a></li>
+                                        <li><a href="advisory.html">Advisory Committee</a></li>
+                                    </ul>
+                                </li>
+                                <li ><a class="current" href="speakers.html">Speakers</a></li>
+                                <li><a href="schedule.html">Schedule</a></li>
                             </ul>
                         </div>
                     </nav>
@@ -189,7 +194,7 @@
                     <ul class="tab-buttons clearfix">
                         <li class="tab-btn active-btn" data-tab="#tab-1">
                             <span class="day">Day 01</span>
-                            <span class="date">01</span> 
+                            <span class="date">01</span>
                             <span class="month">Jan</span> 2020
                         </li>
 
@@ -543,7 +548,7 @@
         </div>
     </section>
     <!--End schedule Section -->
-    
+
     <!-- Newsletter Section -->
     <section class="newsletter-section">
         <div class="anim-icons full-width">
@@ -569,7 +574,7 @@
                         </div>
                     </form>
                 </div>
-            </div> 
+            </div>
         </div>
     </section>
     <!--End Newsletter Section -->
