--- a/ssic2019.html
+++ b/ssic2019.html
@@ -98,7 +98,7 @@
                         <div class="collapse navbar-collapse clearfix" id="navbarSupportedContent">
                             <ul class="navigation clearfix">
                                 <li><a href="index.html">Home</a></li>
-                                <li class="current dropdown"><a href="ssic.html">About</a>
+                                <li class="dropdown"><a href="ssic.html">About</a>
                                     <ul>
                                         <li><a href="ssic.html">SSIC 2017</a></li>
                                         <li><a href="ssic2019.html">SSIC 2019</a></li>
@@ -106,9 +106,14 @@
                                         <li><a href="about-jaipur.html">About Jaipur</a></li>
                                     </ul>
                                 </li>
-                                <li ><a href="speakers.html">Speakers</a></li>
-                                <li ><a href="organizers.html">Organizers</a></li>
-                               <li><a href="schedule.html">Schedule</a></li>
+                                <li class="dropdown"><a href="organizers.html">Committees</a>
+                                    <ul>
+                                        <li><a href="organizers.html">Organisers</a></li>
+                                        <li><a href="advisory.html">Advisory Committee</a></li>
+                                    </ul>
+                                </li>
+                                <li ><a class="current" href="speakers.html">Speakers</a></li>
+                                <li><a href="schedule.html">Schedule</a></li>
                             </ul>
                         </div>
                     </nav>
@@ -258,7 +263,7 @@
     <!-- Features Section Two -->
     <section class="features-section-two">
         <div class="auto-container">
-            <div class="anim-icons">   
+            <div class="anim-icons">
                 <span class="icon twist-line-1 wow zoomIn"></span>
                 <span class="icon twist-line-2 wow zoomIn" data-wow-delay="1s"></span>
                 <span class="icon twist-line-3 wow zoomIn" data-wow-delay="2s"></span>
@@ -458,7 +463,7 @@
                         </div>
                     </form>
                 </div>
-            </div> 
+            </div>
         </div>
     </section>
     <!--End Newsletter Section -->
