--- a/organizers.html
+++ b/organizers.html
@@ -769,27 +769,27 @@
                                     <div class="widget-content">
                                         <div class="outer clearfix">
                                             <figure class="image">
-                                                <a target="__blank" href="images/aboutJaipur/1.jpg" class="lightbox-image" title="Image Title Here"><img src="images/aboutJaipur/1.jpg" alt=""></a>
+                                                <a href="images/ssic2017/1.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/1.png" alt=""></a>
                                             </figure>
 
                                             <figure class="image">
-                                                <a target="__blank" href="images/aboutJaipur/2.jpg" class="lightbox-image" title="Image Title Here"><img src="images/aboutJaipur/2.jpg" alt=""></a>
+                                                <a href="images/ssic2017/2.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/2.png" alt=""></a>
                                             </figure>
 
                                             <figure class="image">
-                                                <a target="__blank" href="images/aboutJaipur/3.jpg" class="lightbox-image" title="Image Title Here"><img src="images/aboutJaipur/3.jpg" alt=""></a>
+                                                <a href="images/ssic2017/3.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/3.png" alt=""></a>
                                             </figure>
 
                                             <figure class="image">
-                                                <a target="__blank" href="images/aboutJaipur/4.jpg" class="lightbox-image" title="Image Title Here"><img src="images/aboutJaipur/4.jpg" alt=""></a>
+                                                <a href="images/ssic2017/4.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/4.png" alt=""></a>
                                             </figure>
 
                                             <figure class="image">
-                                                <a target="__blank" href="images/aboutJaipur/5.jpg" class="lightbox-image" title="Image Title Here"><img src="images/aboutJaipur/5.jpg" alt=""></a>
+                                                <a href="images/ssic2017/5.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/5.png" alt=""></a>
                                             </figure>
 
                                             <figure class="image">
-                                                <a target="__blank" href="images/aboutJaipur/1.jpg" class="lightbox-image" title="Image Title Here"><img src="images/aboutJaipur/6.jpg" alt=""></a>
+                                                <a href="images/ssic2017/6.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/6.png" alt=""></a>
                                             </figure>
                                         </div>
                                     </div>
@@ -824,21 +824,6 @@
         <script src="js/map-script.js"></script>
         <!--End Google Map APi-->>
         <!-- End Footer -->
-
-
-<!--Scroll to top-->
-<div class="scroll-to-top scroll-to-target" data-target="html"><span class="fa fa-angle-double-up"></span></div>
-<script src="js/jquery.js"></script>
-<script src="js/popper.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
-<script src="js/jquery-ui.js"></script>
-<script src="js/jquery.fancybox.js"></script>
-<script src="js/appear.js"></script>
-<script src="js/owl.js"></script>
-<script src="js/wow.js"></script>
-<script src="js/script.js"></script>
-<!-- Color Setting -->
-<script src="js/color-settings.js"></script>
 </body>
 <!-- Copied from https://expert-themes.com/html/eventrox/speakers.html by Cyotek WebCopy 1.7.0.600, Thursday, September 19, 2019, 12:52:40 AM -->
 </html>
