--- a/speakers.html
+++ b/speakers.html
@@ -802,27 +802,27 @@
                                     <div class="widget-content">
                                         <div class="outer clearfix">
                                             <figure class="image">
-                                                <a href="images/aboutJaipur/1.jpg" class="lightbox-image" title="Image Title Here"><img src="images/aboutJaipur/1.jpg" alt=""></a>
+                                                <a href="images/ssic2017/1.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/1.png" alt=""></a>
                                             </figure>
 
                                             <figure class="image">
-                                                <a href="images/aboutJaipur/2.jpg" class="lightbox-image" title="Image Title Here"><img src="images/aboutJaipur/2.jpg" alt=""></a>
+                                                <a href="images/ssic2017/2.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/2.png" alt=""></a>
                                             </figure>
 
                                             <figure class="image">
-                                                <a href="images/aboutJaipur/3.jpg" class="lightbox-image" title="Image Title Here"><img src="images/aboutJaipur/3.jpg" alt=""></a>
+                                                <a href="images/ssic2017/3.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/3.png" alt=""></a>
                                             </figure>
 
                                             <figure class="image">
-                                                <a href="images/aboutJaipur/4.jpg" class="lightbox-image" title="Image Title Here"><img src="images/aboutJaipur/4.jpg" alt=""></a>
+                                                <a href="images/ssic2017/4.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/4.png" alt=""></a>
                                             </figure>
 
                                             <figure class="image">
-                                                <a href="images/aboutJaipur/5.jpg" class="lightbox-image" title="Image Title Here"><img src="images/aboutJaipur/5.jpg" alt=""></a>
+                                                <a href="images/ssic2017/5.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/5.png" alt=""></a>
                                             </figure>
 
                                             <figure class="image">
-                                                <a href="images/aboutJaipur/1.jpg" class="lightbox-image" title="Image Title Here"><img src="images/aboutJaipur/6.jpg" alt=""></a>
+                                                <a href="images/ssic2017/6.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/6.png" alt=""></a>
                                             </figure>
                                         </div>
                                     </div>
