--- a/ssic.html
+++ b/ssic.html
@@ -747,7 +747,7 @@
 
 
     <!-- Call to action -->
-    <section id="spring" class="fun-fact-section style-two" style="background-image: url(images/background/9.jpg);">
+    <section id="spring" class="fun-fact-section style-two" style="background-image: url(images/background/9.jpg);margin-bottom: 70px;">
         <div class="auto-container">
             <div class="sec-title text-center">
                 <span class="title" style="color:#fff;">PROCEEDINGS</span>
@@ -790,7 +790,7 @@
     </section>
     <!--End Call to action -->
     <!-- Main Footer -->
-    <footer class="main-footer">
+    <footer class="main-footer"">
         <!--Widgets Section-->
         <div class="widgets-section">
             <div class="auto-container">
