--- a/organizers.html
+++ b/organizers.html
@@ -125,7 +125,7 @@
                     <!-- Outer box -->
                     <div class="outer-box">
                         <!--Search Box-->
-                        <div class="search-box-outer">
+                        <!-- <div class="search-box-outer">
                             <div class="dropdown">
                                 <button class="search-box-btn dropdown-toggle" type="button" id="dropdownMenu3" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span class="flaticon-search"></span></button>
                                 <ul class="dropdown-menu pull-right search-panel" aria-labelledby="dropdownMenu3">
@@ -141,7 +141,7 @@
                                     </li>
                                 </ul>
                             </div>
-                        </div>
+                        </div> -->
 
                         <!-- Button Box -->
                         <div class="btn-box">
@@ -710,13 +710,13 @@
                                     <div class="text">
                                         <p>Smart Systems and Intelligent Computing is an international forum for researchers, engineers, academicians as well as industrial professionals from all over the world</p>
                                     </div>
-                                    <ul class="social-icon-one social-icon-colored">
+                                    <!-- <ul class="social-icon-one social-icon-colored">
                                         <li><a target="__blank" href="#"><i class="fab fa-linkedin-in"></i></a></li>
                                         <li><a target="__blank" href="#"><i class="fab fa-twitter"></i></a></li>
                                         <li><a target="__blank" href="#"><i class="fab fa-pinterest"></i></a></li>
                                         <li><a target="__blank" href="#"><i class="fab fa-youtube"></i></a></li>
                                         <li><a target="__blank" href="#"><i class="fab fa-dribbble"></i></a></li>
-                                    </ul>
+                                    </ul> -->
                                 </div>
                             </div>
 
