some changes related footer in all pages

--- a/index.html
+++ b/index.html
@@ -1124,7 +1124,7 @@
                                         <li><a href="index.html">Home</a></li>
                                         <li><a href="about-us.html">About Us</a></li>
                                         <li><a href="speakers.html">Speakers</a></li>
-                                        <li><a href="organize.html">Organizers</a></li>
+                                        <li><a href="organizers.html">Committees</a></li>
                                         <li><a href="schedule.html">Schedule</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
                                     </ul>
@@ -1192,6 +1192,9 @@
 
                                             <figure class="image">
                                                 <a href="images/ssic2017/6.png" class="lightbox-image" title="Image Title Here"><img src="images/ssic2017/6.png" alt=""></a>
+
+
+
                                             </figure>
                                         </div>
                                     </div>
