--- a/about-us.html
+++ b/about-us.html
@@ -498,7 +498,7 @@
                                         <li><a href="index.html">Home</a></li>
                                         <li><a href="about-us.html">About Us</a></li>
                                         <li><a href="speakers.html">Speakers</a></li>
-                                        <li><a href="organize.html">Organizers</a></li>
+                                        <li><a href="organizers.html">Committees</a></li>
                                         <li><a href="schedule.html">Schedule</a></li>
                                         <li><a href="contact.html">Contact Us</a></li>
                                     </ul>
