some minute changes in ssic 2017

--- a/ssic.html
+++ b/ssic.html
@@ -172,7 +172,7 @@
             <h1>SSIC 2017</h1>
             <ul class="bread-crumb clearfix">
 
-                <li>Smart System International Conference</li>
+                <li>SMART SYSTEMS, INNOVATION AND COMPUTING</li>
             </ul>
         </div>
     </section>
@@ -750,7 +750,7 @@
     <section id="spring" class="fun-fact-section style-two" style="background-image: url(images/background/9.jpg);margin-bottom: 70px;">
         <div class="auto-container">
             <div class="sec-title text-center">
-                <span class="title" style="color:#fff;">PROCEEDINGS</span>
+                <span class="title" style="color:#fff;">PROCEEDINGS of SSIC 2017, published by</span>
                 <h2 style="color:#fff;">SPRINGER NATURE SINGAPORE</h2>
             </div>
             <div class="fact-counter">
