New changes- home updated, Coming soon added to dummy data pages

--- a/ssic.html
+++ b/ssic.html
@@ -197,11 +197,9 @@
                         </div>
                         <ul class="list-style-one">
                             <li>Multiple Announcements during the event.</li>
-                            <li>Logo & company details on the WordCamp.</li>
-                            <li>Dedicated blog post thanking each Gold.</li>
                             <li>Acknowledgment and opening and closing.</li>
                         </ul>
-                        <div class="btn-box"><a href="contact.html" class="theme-btn btn-style-three"><span class="btn-title">Register Now</span></a></div>
+<!--                        <div class="btn-box"><a href="contact.html" class="theme-btn btn-style-three"><span class="btn-title">Register Now</span></a></div>-->
                     </div>
 
                 </div>
