--- a/ssic2019-old.html
+++ b/ssic2019-old.html
@@ -163,46 +163,310 @@
         </div><!-- End Mobile Menu -->
     </header>
     <!--End Main Header -->
+    <!--Page Title-->
+    <section class="page-title" style="background-image:url(images/background/5.jpg);">
+        <div class="auto-container">
+            <h1>About Us</h1>
+            <ul class="bread-crumb clearfix">
+                <li><a href="index.html">Home</a></li>
+                <li>About Us</li>
+            </ul>
+        </div>
+    </section>
+    <!--End Page Title-->
 
-    <!-- Coming Soon -->
-    <section class="coming-soon">
+    <!-- About Section -->
+    <section class="about-section">
         <div class="anim-icons full-width">
             <span class="icon icon-circle-blue wow fadeIn"></span>
             <span class="icon icon-dots wow fadeInleft"></span>
-            <span class="icon icon-line-1 wow zoomIn"></span>
             <span class="icon icon-circle-1 wow zoomIn"></span>
         </div>
-
         <div class="auto-container">
-            <div class="content">
-<!--                <div class="logo"><a href="index.html"><img style="width:50%;" src="images/logo_image.png" alt=""></a></div>-->
-                <h1>Coming Soon</h1>
-                <div class="text">Stay tuned for more information.<br> Subscribe to our newsletter to stay updated</div>
-                <div class="timer">
-                    <div class="cs-countdown clearfix" data-countdown="12/1/2019 05:06:59"></div>
-                </div>
-                <!--Emailed Form-->
-                <div class="emailed-form">
-                    <form method="post" action="contact.html">
-                        <div class="form-group">
-                            <input type="email" name="email" value="" placeholder="Enter your email" required="">
-                            <button type="submit" class="theme-btn"><i class="flaticon-arrow-pointing-to-right"></i></button>
+            <div class="row">
+                <!-- Content Column -->
+                <div class="content-column col-lg-6 col-md-12 col-sm-12">
+                    <div class="inner-column">
+                        <div class="sec-title">
+                            <span class="title">ABOUT EVENT</span>
+                            <h2>Welcome to the World Digital Conference 2020</h2>
+                            <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incd idunt labore et dolore magna aliqua enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip exea commodo consequat.</div>
                         </div>
-                    </form>
+                        <ul class="list-style-one">
+                            <li>Multiple Announcements during the event.</li>
+                            <li>Logo & company details on the WordCamp.</li>
+                            <li>Dedicated blog post thanking each Gold.</li>
+                            <li>Acknowledgment and opening and closing.</li>
+                        </ul>
+                        <div class="btn-box"><a href="contact.html" class="theme-btn btn-style-three"><span class="btn-title">Register Now</span></a></div>
+                    </div>
                 </div>
-                <div class="social-links">
-                    <ul class="social-icon-two social-icon-colored">
-                        <li><a href="#"><span class="fab fa-facebook-f"></span></a></li>
-                        <li><a href="#"><span class="fab fa-twitter"></span></a></li>
-                        <li><a href="#"><span class="fab fa-linkedin-in"></span></a></li>
-<!--                        <li><a href="#"><span class="fab fa-behance"></span></a></li>-->
-<!--                        <li><a href="#"><span class="fab fa-dribbble"></span></a></li>-->
-                    </ul>
+
+                <!-- Image Column -->
+                <div class="image-column col-lg-6 col-md-12 col-sm-12">
+                    <div class="image-box">
+                        <figure class="image wow fadeIn"><img src="images/resource/about-img-1.jpg" alt=""></figure>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-    <!-- End Coming Soon -->
+    <!--End About Section -->
+
+    <!-- Fun Fact Section -->
+    <section class="fun-fact-section style-two" style="background-image: url(images/background/9.jpg);">
+        <div class="auto-container">
+            <div class="fact-counter">
+                <div class="row clearfix">
+
+                    <!--Column-->
+                    <div class="counter-column col-lg-3 col-md-6 col-sm-12 wow fadeInUp">
+                        <div class="count-box">
+                            <span class="icon icon_headphones"></span>
+                            <span class="count-text" data-speed="3000" data-stop="190">0</span>
+                            <h4 class="counter-title">Participants</h4>
+                        </div>
+                    </div>
+
+                    <!--Column-->
+                    <div class="counter-column col-lg-3 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="400ms">
+                        <div class="count-box">
+                            <span class="icon icon_ribbon_alt"></span>
+                            <span class="count-text" data-speed="3000" data-stop="62">0</span>
+                            <h4 class="counter-title">Awards Win</h4>
+                        </div>
+                    </div>
+
+                    <!--Column-->
+                    <div class="counter-column col-lg-3 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="800ms">
+                        <div class="count-box">
+                            <span class="icon icon_like"></span>
+                            <span class="count-text" data-speed="3000" data-stop="54">0</span>
+                            <h4 class="counter-title">Certified Teachers</h4>
+                        </div>
+                    </div>
+
+                    <!--Column-->
+                    <div class="counter-column col-lg-3 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="1200ms">
+                        <div class="count-box">
+                            <span class="icon icon_book_alt"></span>
+                            <span class="count-text" data-speed="3000" data-stop="38">0</span>
+                            <h4 class="counter-title">Courses</h4>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--End Fun Fact Section -->
+
+    <!-- Features Section Two -->
+    <section class="features-section-two">
+        <div class="auto-container">
+            <div class="anim-icons">
+                <span class="icon twist-line-1 wow zoomIn"></span>
+                <span class="icon twist-line-2 wow zoomIn" data-wow-delay="1s"></span>
+                <span class="icon twist-line-3 wow zoomIn" data-wow-delay="2s"></span>
+            </div>
+
+            <div class="row">
+                <!-- Title Block -->
+                <div class="title-block col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+                    <div class="inner-box">
+                        <div class="sec-title">
+                            <span class="title">Features</span>
+                            <h2>Our Feature</h2>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Feature Block -->
+                <div class="feature-block-two col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+                    <div class="inner-box">
+                        <div class="icon-box"><span class="icon flaticon-lecture"></span></div>
+                        <h4><a href="about.html">Great Speakers</a></h4>
+                        <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incd.</div>
+                    </div>
+                </div>
+
+                <!-- Feature Block -->
+                <div class="feature-block-two col-lg-4 col-md-6 col-sm-12 wow fadeInUp">
+                    <div class="inner-box">
+                        <div class="icon-box"><span class="icon flaticon-search"></span></div>
+                        <h4><a href="about.html">Experience</a></h4>
+                        <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incd.</div>
+                    </div>
+                </div>
+
+                <!-- Feature Block -->
+                <div class="feature-block-two col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="400ms">
+                    <div class="inner-box">
+                        <div class="icon-box"><span class="icon flaticon-diamond-1"></span></div>
+                        <h4><a href="about.html">Networking</a></h4>
+                        <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incd.</div>
+                    </div>
+                </div>
+
+                <!-- Feature Block -->
+                <div class="feature-block-two col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="800ms">
+                    <div class="inner-box">
+                        <div class="icon-box"><span class="icon flaticon-success"></span></div>
+                        <h4><a href="about.html">Party</a></h4>
+                        <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incd.</div>
+                    </div>
+                </div>
+
+                <!-- Feature Block -->
+                <div class="feature-block-two col-lg-4 col-md-6 col-sm-12 wow fadeInUp" data-wow-delay="1200ms">
+                    <div class="inner-box">
+                        <div class="icon-box"><span class="icon flaticon-employee"></span></div>
+                        <h4><a href="about.html">New People</a></h4>
+                        <div class="text">Dolor sit amet consectetur elit sed do eiusmod tempor incd.</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--End Features Section -->
+
+    <!-- Call to action -->
+    <section class="call-to-action" style="background-image: url(images/background/11.jpg);">
+        <div class="auto-container">
+            <div class="content-box">
+                <div class="text">WE’RE A LEADING MEETUP COMPANY</div>
+                <h2>We Are Always at The Forefront <br> of The Business Conference !</h2>
+                <div class="btn-box">
+                    <a href="contact.html" class="theme-btn btn-style-one"><span class="btn-title">Contact Us</span></a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--End Call to action -->
+
+     <!-- Event Info Section -->
+    <section class="event-info-section">
+        <div class="auto-container">
+            <div class="row">
+                <!-- Info Column -->
+                <div class="info-column col-lg-6 col-md-12 col-sm-12 order-2">
+                    <div class="inner-column">
+                        <div class="sec-title style-two">
+                            <span class="title">Reach us</span>
+                            <h2>Direction for the <br>Event hall</h2>
+                        </div>
+
+                        <div class="event-info-tabs tabs-box">
+                            <!--Tabs Box-->
+                            <ul class="tab-buttons clearfix">
+                                <li class="tab-btn active-btn" data-tab="#tab1">Time</li>
+                                <li class="tab-btn" data-tab="#tab2">Venue</li>
+                                <li class="tab-btn" data-tab="#tab3">How to</li>
+                            </ul>
+
+                            <div class="tabs-content">
+                                <!--Tab-->
+                                <div class="tab active-tab" id="tab1">
+                                    <h4><span class="icon far fa-calendar"></span> January 20, 2020</h4>
+                                    <div class="text">9.00 AM - 04.00 PM</div>
+                                    <ul class="info-list">
+                                        <li><span class="icon icon_profile"></span> Dianne Ameter</li>
+                                        <li><span class="icon icon_phone"></span> <a href="tel:+690-147-265-345">+123 456 7890</a></li>
+                                        <li><span class="icon icon_mail"></span> <a href="mailto:sopport@Eventrox.com">sopport@Eventrox.com</a></li>
+                                    </ul>
+                                </div>
+
+                                <!--Tab-->
+                                <div class="tab" id="tab2">
+                                    <h4><span class="icon fa fa-map-marker-alt"></span>Pearl hotel, New york, USA</h4>
+                                    <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt labore et dolore magna aliqua. Aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</div>
+                                </div>
+
+                                <!--Tab-->
+                                <div class="tab" id="tab3">
+                                    <h4><span class="icon fa fa-directions"></span> How to get there</h4>
+                                    <div class="text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt labore et dolore magna aliqua. Aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore.</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Image Column -->
+                <div class="map-column col-lg-6 col-md-12 col-sm-12">
+                    <!--Map Outer-->
+                    <div class="map-outer">
+                        <!--Map Canvas-->
+                        <div class="map-canvas" data-zoom="12" data-lat="-37.817085" data-lng="144.955631" data-type="roadmap" data-hue="#ffc400" data-title="Envato" data-icon-path="images/icons/map-marker.png" data-content="Melbourne VIC 3000, Australia<br><a href='mailto:info@youremail.com'>info@youremail.com</a>">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--End Event Info Section -->
+
+    <!-- App Section -->
+    <section class="app-section">
+        <div class="auto-container">
+            <div class="row">
+                <!-- Content Box -->
+                <div class="content-column col-lg-5 col-md-12 col-sm-12">
+                    <div class="inner-column">
+                        <div class="sec-title">
+                            <span class="title">App Download</span>
+                            <h2>Eventrox App</h2>
+                        </div>
+                        <div class="text-box">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt labore et dolore magna aliqua. Aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</div>
+                        <div class="link-box">
+                            <a href="#"><img src="images/icons/app-store.png" alt=""></a>
+                            <a href="#"><img src="images/icons/google-play.png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Image Box -->
+                <div class="image-column col-lg-7 col-md-12 col-sm-12">
+                    <div class="inner-column">
+                        <div class="image-box">
+                            <figure class="image wow fadeInRight"><img src="images/resource/app-mockup.png" alt=""></figure>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--End App Section -->
+
+    <!-- Newsletter Section -->
+    <section class="newsletter-section">
+        <div class="anim-icons full-width">
+            <span class="icon icon-shape-3 wow fadeIn"></span>
+            <span class="icon icon-line-1 wow fadeIn"></span>
+        </div>
+
+        <div class="auto-container">
+            <!--Subscribe Form-->
+            <div class="subscribe-form wow fadeInUp" data-wow-delay="500ms">
+                <div class="envelope-image"></div>
+                <div class="form-inner">
+                    <div class="upper-box">
+                        <div class="sec-title text-center">
+                            <div class="icon-box"><span class="fa fa-envelope"></span></div>
+                            <h2>Subscribe our newslatter</h2>
+                            <div class="text">Lorem ipsum dolor amet consectetur adipisicing elit sed eiusm <br>tempor incididunt ut labore dolore magna.</div>
+                        </div>
+                    </div>
+                    <form method="post" action="contact.html">
+                        <div class="form-group">
+                            <input type="email" name="email" value="" placeholder="Your email" required="">
+                            <button type="submit" class="theme-btn"><span class="fa fa-paper-plane"></span></button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </section>
+    <!--End Newsletter Section -->
 
     <footer class="main-footer">
         <!--Widgets Section-->
@@ -329,13 +593,16 @@
         <script src="js/popper.min.js"></script>
         <script src="js/bootstrap.min.js"></script>
         <script src="js/jquery-ui.js"></script>
-        <script src="js/jquery.countdown.js"></script>
         <script src="js/jquery.fancybox.js"></script>
         <script src="js/appear.js"></script>
+        <script src="js/owl.js"></script>
         <script src="js/wow.js"></script>
         <script src="js/script.js"></script>
         <!-- Color Setting -->
         <script src="js/color-settings.js"></script>
+        <!--Google Map APi Key-->
+        <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCPH8h1UpcK01BdcvoZeOzq-_wJqRxN1Pc"></script>
+        <script src="js/map-script.js"></script>
         <!--End Google Map APi-->>
         <!-- End Footer -->
 
